welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:12: error: not found: value nbreTour
	nbreTour==nbreTour+1;
        ^