welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var nbTour=0
while (nbTour<10) {
	avance(8);
	gauche();
	avance(8);
	gauche();
	avance(8);
	gauche();
	avance(8);
	gauche();
	nbreTour==nbreTour+1;
}
